<resources>
    <string name="app_name">TimeCrab</string>
    <string name="plus">+</string>
    <string name="september">September</string>
    <string name="monday">Monday</string>
    <string name="_19">19</string>
    <string name="tuesday">Tuesday</string>
    <string name="_20">20</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="plus_sign">+</string>
    <string name="notifications">Notifications</string>
    <string name="schedule">Schedule</string>
    <string name="previous_events">Previous Events</string>
    <string name="january_01_2022">January 01, 2022</string>
    <string name="text_arrow"><![CDATA[>]]></string>
    <string name="new_group">New Group</string>
    <string name="group_name">Group Name</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="or">OR</string>
    <string name="dashed_bar">__________</string>
    <string name="timecrab">TimeCrab</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="text_dash">-</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="appearance">Appearance</string>
    <string name="back">Back</string>
    <string name="personalization">Personalization</string>
    <string name="welcome_to_timecrab">Welcome to TimeCrab!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_friend_code">Enter Friend Code...</string>
    <string name="add">Add</string>
    <string name="sample_phone_number">+1 (555)-555-5555</string>
    <string name="sample_friend_code">Friend Code: AAAA-0000</string>
    <string name="profile_name">Jane Doe</string>
    <string name="edit">Edit</string>
    <string name="add_friend">Add Friend</string>
    <string name="x">X</string>
</resources>