<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/bottomNav2"
        android:layout_width="412sp"
        android:layout_height="85sp"
        android:background="@color/timecrab_blue"
        android:fontFamily="@font/acme"
        android:paddingLeft="15sp"
        android:paddingTop="10sp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/upcomingEvents"
        android:layout_width="395sp"
        android:layout_height="75sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="8sp"
        android:backgroundTint="@color/timecrab_blue"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/upcoming_events"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Button
        android:id="@+id/plus"
        android:layout_width="86sp"
        android:layout_height="0sp"
        android:layout_marginStart="36sp"
        android:layout_marginTop="12sp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/plus_sign"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="50sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="@+id/upcomingEvents"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/upcomingEvents"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Button
        android:id="@+id/notifications"
        android:layout_width="395sp"
        android:layout_height="75sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="8sp"
        android:backgroundTint="@color/timecrab_blue"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/notifications"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upcomingEvents" />

    <Button
        android:id="@+id/schedule"
        android:layout_width="395sp"
        android:layout_height="75sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="20sp"
        android:backgroundTint="@color/timecrab_blue"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/schedule"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/previousEvents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications" />

    <Button
        android:id="@+id/previousEvents"
        android:layout_width="395sp"
        android:layout_height="75sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="8sp"
        android:backgroundTint="@color/timecrab_blue"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/previous_events"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule" />

    <TextView
        android:id="@+id/date"
        android:layout_width="412sp"
        android:layout_height="40sp"
        android:background="@color/timecrab_light_blue"
        android:fontFamily="@font/acme"
        android:paddingLeft="15sp"
        android:paddingTop="10sp"
        android:text="@string/january_01_2022"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:layout_width="86sp"
        android:layout_height="0sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="8sp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/plus_sign"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="50sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/notifications"
        app:layout_constraintTop_toBottomOf="@+id/schedule" />

    <Button
        android:id="@+id/button"
        android:layout_width="86sp"
        android:layout_height="0sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="8sp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/plus_sign"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="50sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/notifications"
        app:layout_constraintTop_toBottomOf="@+id/upcomingEvents" />

    <Button
        android:id="@+id/button2"
        android:layout_width="86sp"
        android:layout_height="0sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="8sp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/plus"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="50sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/notifications"
        app:layout_constraintTop_toBottomOf="@+id/notifications" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginEnd="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomNav2"
        app:layout_constraintEnd_toStartOf="@+id/calendarButton"
        app:layout_constraintTop_toTopOf="@+id/bottomNav2"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/calendarButton"
        android:layout_width="78sp"
        android:layout_height="70sp"
        android:layout_marginEnd="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomNav2"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toTopOf="@+id/bottomNav2"
        app:srcCompat="@drawable/calendar" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginEnd="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottomNav2"
        app:layout_constraintTop_toTopOf="@+id/bottomNav2"
        app:srcCompat="@drawable/samplepfp" />

    <ImageButton
        android:id="@+id/groupsButton"
        android:layout_width="70sp"
        android:layout_height="76sp"
        android:layout_marginStart="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomNav2"
        app:layout_constraintEnd_toEndOf="@+id/bottomNav2"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="@+id/bottomNav2"
        app:layout_constraintTop_toTopOf="@+id/bottomNav2"
        app:srcCompat="@drawable/groups" />

</androidx.constraintlayout.widget.ConstraintLayout>