<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <TextView
        android:id="@+id/month"
        android:layout_width="221sp"
        android:layout_height="41sp"


        android:layout_marginStart="9sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="181sp"
        android:layout_marginBottom="5sp"
        android:background="@color/blue_secondary"
        android:fontFamily="@font/poppins_medium"
        android:radius="15sp"
        android:text="@string/september"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/dayInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dayInformation"
        android:layout_width="397sp"
        android:layout_height="358sp"
        android:layout_marginStart="7sp"
        android:layout_marginEnd="7sp"
        app:layout_constraintBottom_toTopOf="@+id/dayInformation2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:srcCompat="@drawable/calendar_day" />

    <ImageView
        android:id="@+id/dayInformation2"
        android:layout_width="397sp"
        android:layout_height="358sp"
        android:layout_marginStart="7sp"
        android:layout_marginEnd="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayInformation"
        app:srcCompat="@drawable/calendar_day" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/monday"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/dayInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="37sp"
        android:layout_height="45sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/_19"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/dayInformation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tuesday"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/dayInformation2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:layout_constraintVertical_bias="0.586" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="55sp"
        android:layout_height="48sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/_20"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/dayInformation2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/imageView4"
        android:layout_width="415sp"
        android:layout_height="85sp"
        android:layout_marginTop="260sp"
        android:background="@color/blue_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dayInformation2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/timecrab_banner" />

    <ImageButton
        android:id="@+id/calendarButton"
        android:layout_width="78sp"
        android:layout_height="70sp"
        android:layout_marginEnd="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/calendar"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@drawable/samplepfp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/groupsButton"
        android:layout_width="70sp"
        android:layout_height="76sp"
        android:layout_marginEnd="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/groups"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginEnd="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/calendarButton"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>